--- a/arc-radius.html
+++ b/arc-radius.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arc Radius Calculator</title>
-    <link rel="stylesheet" href="arc-radius.html">
+    <link rel="stylesheet" href="arc-styles.css">
 </head>
 <body>
     <div class="container">
@@ -19,6 +19,6 @@
         <button onclick="resetFields()">Reset</button>
         <div id="result"></div>
     </div>
-    <script src="arc-radius.html"></script>
+    <script src="arc-script.js"></script>
 </body>
 </html>
