--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
     <a href="arc-radius.html">Arc Radius Calc</a>
     <a href="fraction-finder.html">Fraction Finder</a>
     <a href="boardFootage.html">Board Footage Calculator</a>
+    <a href="fractions-calc.html">Fractions Calculator</a>
 </body>
 </html>
