--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
     <a href="fraction-finder.html">Fraction Finder</a>
     <a href="boardFootage.html">Board Footage Calculator</a>
     <a href="fractions-calc.html">Fractions Calculator</a>
+    <a href="stud-calc.html">Stud Calculator</a>
 </body>
 </html>
