--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <h1>Resi Build Tools</h1>
-    <p>We make things smart because you're not:</p>
+    <p>Still better than Ryobi tools:</p>
     <a href="converter.html">Imperial / Metric Converter</a>
     <a href="arc-radius.html">Arc Radius Calc</a>
     <a href="fraction-finder.html">Fraction Finder</a>
