--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
     <a href="boardFootage.html">Board Footage Calculator</a>
     <a href="fractions-calc.html">Fractions Calculator</a>
     <a href="stud-calc.html">Stud Calculator</a>
+    <a href="concrete-calc.html">Concrete Calculator</a>
 </body>
 </html>
