--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
     <a href="fractions-calc.html">Fractions Calculator</a>
     <a href="stud-calc.html">Stud Calculator</a>
     <a href="concrete-calc.html">Concrete Calculator</a>
+    <a href="beam-calc.html">Beam Spacing Calculator</a>
 </body>
 </html>
