--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Home Page</title>
+    <title>Resi Build Tools</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -18,7 +18,8 @@
             color: white;
             text-decoration: none;
             border-radius: 5px;
-            width: fit-content; /* Adjust width to fit content */
+            width: 200px;
+            text-align: center;
         }
         a:hover {
             background-color: #0056b3;
@@ -29,12 +30,13 @@
     <h1>Resi Build Tools</h1>
     <p>Still better than Ryobi tools:</p>
     <a href="converter.html">Imperial / Metric Converter</a>
-    <a href="arc-radius.html">Arc Radius Calc</a>
     <a href="fraction-finder.html">Fraction Finder</a>
+    <a href="fractions-calc.html">Fraction Calculator</a>
+    <a href="arc-radius.html">Arc Radius Calc</a>
+    <a href="beam-calc.html">Beam Calculator</a>
     <a href="boardFootage.html">Board Footage Calculator</a>
-    <a href="fractions-calc.html">Fractions Calculator</a>
     <a href="stud-calc.html">Stud Calculator</a>
     <a href="concrete-calc.html">Concrete Calculator</a>
-    <a href="beam-calc.html">Beam Spacing Calculator</a>
+
 </body>
 </html>
