--- a/fraction-finder.html
+++ b/fraction-finder.html
@@ -6,6 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fraction Finder</title>
     <link rel="stylesheet" href="ffstyles.css">
+    <style>
+        .scale {
+            position: relative;
+            width: 100%;
+            height: 50px;
+            border: 1px solid #000;
+            margin-top: 20px;
+        }
+        .tick {
+            position: absolute;
+            height: 100%;
+            width: 1px;
+            background-color: black;
+        }
+        .tick-1-2 {
+            height: 100%;
+        }
+        .tick-1-4 {
+            height: 75%;
+        }
+        .tick-1-8 {
+            height: 50%;
+        }
+        .tick-1-16 {
+            height: 25%;
+        }
+        .pointer {
+            position: absolute;
+            height: 100%;
+            width: 2px;
+            background-color: red;
+        }
+    </style>
 </head>
 
 <body>
@@ -19,7 +52,7 @@
 </div>
 
 <h3 id="resultFraction"></h3>
-<div id="scale"></div>
+<div id="scale" class="scale"></div>
 
 <script>
     function gcd(a, b) {
@@ -38,33 +71,31 @@
             return;
         }
 
-        // Convert input to inches in sixteenths
-        const fractionNumerator = Math.round(input * 16); // Convert to sixteenths
-        const nearestFraction = fractionNumerator / 16;
+        const denominators = [2, 4, 8, 16, 32, 64];
+        let exactFraction = null;
 
-        // Get the whole number and the remaining numerator for the fraction
-        const wholeNumber = Math.floor(nearestFraction);
-        const numerator = fractionNumerator % 16;
-
-        // Simplify the fraction to simplest terms
-        let fractionString;
-        if (numerator === 0) {
-            fractionString = `${wholeNumber}`;
-        } else {
-            const [simplifiedNumerator, simplifiedDenominator] = simplifyFraction(numerator, 16);
-            if (wholeNumber > 0) {
-                fractionString = `${wholeNumber} ${simplifiedNumerator}/${simplifiedDenominator}`;
-            } else {
-                fractionString = `${simplifiedNumerator}/${simplifiedDenominator}`;
+        for (let denom of denominators) {
+            const numerator = Math.round(input * denom);
+            if (Math.abs(input - (numerator / denom)) < 1e-6) {
+                exactFraction = simplifyFraction(numerator, denom);
+                break;
             }
         }
 
-        document.getElementById('resultFraction').innerText = `Nearest Fraction: ${fractionString}`;
+        if (exactFraction) {
+            document.getElementById('resultFraction').innerText = `Exact Fraction: ${exactFraction[0]}/${exactFraction[1]}`;
+        } else {
+            const fractionNumerator = Math.round(input * 16); // Convert to sixteenths
+            const nearestFraction = fractionNumerator / 16;
+            const wholeNumber = Math.floor(nearestFraction);
+            const numerator = fractionNumerator % 16;
+            const simplified = simplifyFraction(numerator, 16);
+            document.getElementById('resultFraction').innerText = `Nearest Fraction: ${wholeNumber ? wholeNumber + ' ' : ''}${simplified[0]}/${simplified[1]}`;
+        }
 
-        // Display the scale
+        // Update the visual scale
         const scale = document.getElementById('scale');
-        const pointerPosition = (input) * 100; // Use the exact decimal value for positioning
-        scale.innerHTML = ''; // Clear previous scale
+        scale.innerHTML = ''; // Clear previous markers
 
         // Create tick marks for 0 to 1 inch
         for (let i = 0; i <= 16; i++) { // Total of 16 ticks for full 1 inch
@@ -84,19 +115,21 @@
             tick.style.left = `${(i / 16) * 100}%`; // Position based on total ticks
             scale.appendChild(tick);
         }
+
         // Add pointer to indicate decimal point on the scale
         const pointer = document.createElement('div');
         pointer.className = 'pointer';
-        pointer.style.left = `${pointerPosition}%`;
+        pointer.style.left = `${input * 100}%`;
         scale.appendChild(pointer);
     }
 
     function clearInput() {
         document.getElementById('decimalInput').value = '';
         document.getElementById('resultFraction').innerText = '';
-        document.getElementById('scale').innerHTML = ''; // Clear the scale, including the pointer
+        document.getElementById('scale').innerHTML = ''; // Clear the scale
     }
 </script>
+
 </body>
 
 </html>
