--- a/fraction-finder.html
+++ b/fraction-finder.html
@@ -6,53 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fraction Finder</title>
     <link rel="stylesheet" href="ffstyles.css">
-    <style>
-        .scale {
-            position: relative;
-            width: 100%;
-            height: 50px;
-            border: 1px solid #000;
-            margin-top: 20px;
-        }
-        .tick {
-            position: absolute;
-            height: 100%;
-            width: 1px;
-            background-color: black;
-        }
-        .tick-1-2 {
-            height: 100%;
-        }
-        .tick-1-4 {
-            height: 75%;
-        }
-        .tick-1-8 {
-            height: 50%;
-        }
-        .tick-1-16 {
-            height: 25%;
-        }
-        .pointer {
-            position: absolute;
-            height: 100%;
-            width: 2px;
-            background-color: red;
-        }
-    </style>
 </head>
 
 <body>
 
-<h1>Fraction Finder</h1>
-<p>Enter a decimal value in inches:</p>
-<input type="number" id="decimalInput" step="0.000001" placeholder="e.g. 0.36" />
-<div class="button-container">
-    <button onclick="convertDecimal()">Convert</button>
-    <button onclick="clearInput()">Clear</button>
-</div>
+<div class="container">
+    <h1>Fraction Finder</h1>
+    <summary>
+        <p>Display where a decimal lies on a one-inch scale.</p>
+        <p><em>Enter a decimal value:</em></p>
+    </summary>
+    <input type="number" id="decimalInput" step="0.000001" placeholder="e.g. 0.36" />
+    <div class="button-container">
+        <button onclick="convertDecimal()">Convert</button>
+        <button onclick="clearInput()">Clear</button>
+    </div>
 
-<h3 id="resultFraction"></h3>
-<div id="scale" class="scale"></div>
+    <h3 id="resultFraction"></h3>
+    <div id="scale" class="scale"></div>
+</div>
 
 <script>
     function gcd(a, b) {
@@ -66,8 +38,8 @@
 
     function convertDecimal() {
         const input = parseFloat(document.getElementById('decimalInput').value);
-        if (isNaN(input)) {
-            alert("Please enter a valid decimal number.");
+        if (isNaN(input) || input <= 0 || input >= 1) {
+            alert("Please enter a valid decimal number between 0 and 1.");
             return;
         }
 
