--- a/stud-calc.html
+++ b/stud-calc.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Framing Calculator</title>
+    <title>Stud Counter</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -83,7 +83,7 @@
 <body>
 
 <div class="container">
-    <h2>Framing Calculator</h2>
+    <h2>Stud Counter</h2>
 
     <label for="wall-length">Wall Length (Feet):</label>
     <input type="number" id="wall-length" placeholder="Enter wall length">
