--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <a href="arc-radius.html">Arc Radius Calc</a>
     <a href="beam-calc.html">Beam Calculator</a>
     <a href="boardFootage.html">Board Footage Calculator</a>
-    <a href="stud-calc.html">Stud Calculator</a>
+    <a href="stud-calc.html">Stud Counter</a>
     <a href="concrete-calc.html">Concrete Calculator</a>
 
 </body>
