--- a/converter.html
+++ b/converter.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container"> 
-        <h1>Inches to Millimeters Converter</h1>
+        <h4>in/mm Converter</h4>
         <div>
             <label for="inchesInput">Inches:</label>
             <input type="number" id="inchesInput" placeholder="Enter inches">
