--- a/boardFootage.html
+++ b/boardFootage.html
@@ -4,53 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Board Footage Calculator</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
-            max-width: 600px;
-        }
-        .form-group {
-            display: flex;
-            align-items: center;
-            margin-bottom: 15px;
-        }
-        .form-group label {
-            flex: 1;
-            margin-right: 10px;
-        }
-        input, select {
-            width: 25%; /* Reduced width to 25% */
-            margin: 10px 0;
-        }
-        button {
-            padding: 10px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-        .result {
-            margin-top: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="boardfootage.css">
 </head>
 <body>
 
-<h1>Board Footage Calculator</h1>
+<div class="container">
+    <h1>Board Footage Calculator</h1>
 
-<div class="form-group">
-    <label for="thickness">Select Thickness (in Quarters):</label>
-    <select id="thickness">
-        <option value="1">4/4 (1 inch)</option>
-        <option value="1.25">5/4 (1.25 inches)</option>
-        <option value="1.5">6/4 (1.5 inches)</option>
-        <option value="2">8/4 (2 inches)</option>
-    </select>
-</div>
+    <div class="form-group">
+        <label for="thickness">Select Thickness (in Quarters):</label>
+        <select id="thickness">
+            <option value="1">4/4 (1 inch)</option>
+            <option value="1.25">5/4 (1.25 inches)</option>
+            <option value="1.5">6/4 (1.5 inches)</option>
+            <option value="2">8/4 (2 inches)</option>
+        </select>
+    </div>
 
 <div class="form-group">
     <label for="width">Width (in inches):</label>
