--- a/concrete-calc.html
+++ b/concrete-calc.html
@@ -4,81 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Concrete Calculator</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            margin: 0;
-            padding: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
-            width: 100%;
-        }
-
-        h2 {
-            text-align: center;
-            color: #333;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 8px;
-            color: #555;
-        }
-
-        input[type="number"] {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 20px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-
-        button {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border: none;
-            border-radius: 4px;
-            background-color: #007bff;
-            color: #fff;
-            font-size: 16px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-
-        .result {
-            background-color: #e9ecef;
-            padding: 10px;
-            border-radius: 4px;
-            margin-top: 20px;
-            text-align: center;
-        }
-
-        .result h3 {
-            margin-top: 0;
-            color: #333;
-        }
-
-        .result p {
-            margin: 5px 0;
-            color: #555;
-        }
-    </style>
+    <link rel="stylesheet" href="concrete-calc.css">
 </head>
 <body>
 
@@ -100,37 +26,7 @@
     <div class="result" id="result"></div>
 </div>
 
-<script>
-    function calculate() {
-        const length = parseFloat(document.getElementById('length').value);
-        const width = parseFloat(document.getElementById('width').value);
-        const thickness = parseFloat(document.getElementById('thickness').value);
-
-        if (isNaN(length) || isNaN(width) || isNaN(thickness)) {
-            alert('Please enter valid inputs');
-            return;
-        }
-
-        // Calculate the total cubic feet
-        const cubicFeet = (length * width * (thickness / 12)).toFixed(2);
-
-        // Convert cubic feet to cubic yards
-        const cubicYards = (cubicFeet / 27).toFixed(2);
-
-        // Display the result
-        const resultDiv = document.getElementById('result');
-        resultDiv.innerHTML = `<h3>Results</h3>
-                               <p>Total Cubic Feet: ${cubicFeet}</p>
-                               <p>Total Cubic Yards: ${cubicYards}</p>`;
-    }
-
-    function resetForm() {
-        document.getElementById('length').value = '';
-        document.getElementById('width').value = '';
-        document.getElementById('thickness').value = '';
-        document.getElementById('result').innerHTML = '';
-    }
-</script>
+<script src="concrete-calc.js"></script>
 
 </body>
 </html>
